comment deletion works
